Fixed navbar z-index

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -36,6 +36,7 @@ html {
   padding-left: 10px;
   padding-right: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
 
   .left {
     display: flex;
